--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,33 @@
-name: CI
+name: CI_action
 
 on:
+  push:
+    branches: [main]
   pull_request:
-    branches:
-      - main  
+    branches: [main]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest  
 
+    strategy:
+      matrix:
+        node-version: [12.x]
+
     steps:
-      - name: Checkout code
+      - name: Checkout repository
         uses: actions/checkout@v2  
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Set up Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
         with:
-          node-version: '14'  
+          node-version: ${{ matrix.node-version }}  
 
       - name: Install dependencies
         run: npm install  
 
       - name: Run tests
         run: npm test  
+
+      - name: Build
+        run: npm run build
