--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: npm install  
 
-      - name: Run tests
+      - name: Run the tests
         run: npm test  
 
       - name: Build
